--- a/first-lesson/index.html
+++ b/first-lesson/index.html
@@ -5,7 +5,7 @@
 	<title>Мой второй простой сайт</title>
 </head>
 <body>
-	<a href="index.html">Главная</a> <a href="about.html">Обо мне</a> <a href="">Контакты</a>
+	<a href="index.html">Главная</a> <a href="about.html">Обо мне</a> <a href="#">Контакты</a>
 	<h1>Мой	второй простой сайт</h1>
 	<hr>
 	<h2>тут я хочу показать фотографии случайных котов:</h2>
