--- a/first-lesson/about.html
+++ b/first-lesson/about.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<a href="index.html">Главная</a> <a href="about.html">Обо мне</a>
-	<h1>Немного обо мне.</h1>
-	<h2>Любитель дергать бассовые струны ночью, пока никто не видит.</h2>
+	<h2>Немного обо мне.</h2>
+	<p>Любитель дергать бассовые струны ночью, пока никто не видит.</p>
 </body>
 </html>
