--- a/first-lesson/about.html
+++ b/first-lesson/about.html
@@ -5,7 +5,7 @@
 	<title>1 fUct about</title>
 </head>
 <body>
-	<a href="index.html">Главная</a> <a href="about.html">Обо мне</a>
+	<a href="index.html">Главная</a> | <a href="about.html">Обо мне</a>
 	<h2>Немного обо мне.</h2>
 	<p>Любитель дергать бассовые струны ночью, пока никто не видит.</p>
 </body>
